# GoL

./: CMakeLists.txt  README.md  README.txt  commitHistory.txt  fileHandler.c  fileHandler.h  graphics.c  graphics.h  input.txt  logic.c  logic.h  main.c  outputGrid.txt  outputState.txt  testReadGrid.txt  testWriteGrid.txt  testWriteState.txt  unit_tests.c
unity/: CMakeLists.txt
